# generative_ml

./: .gitignore  pyproject.toml  train.ipynb
generative_ml/: __init__.py  dataset.py  hyper_params.py  main.py
generative_ml/models/: __init__.py
generative_ml/models/dummy_vae/: __init__.py  decoder.py  dummy_vae.py  variational_encoder.py
generative_ml/models/interfaces/: __init__.py  vae.py  vae_interface.py
generative_ml/models/vae/: decoder.py  vae.py  variational_encoder.py
generative_ml/training/: __init__.py  sample.py  train_vae.py
